--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "randomstring": "^1.1.5",
     "request": "^2.79.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "tape": "^4.6.3",
+    "tap": "~8.0.1",
+    "tap-parser": "~3.0.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap test/*.js"
   },
   "repository": {
     "type": "git",
