--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "promise": "^7.1.1",
     "randomstring": "^1.1.5",
     "request": "^2.79.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "tape": "^4.6.3"
   },
   "devDependencies": {
     "tape": "^4.6.3",
