--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tape": "^4.6.3",
     "tap": "~8.0.1",
     "tap-parser": "~3.0.4",
+    "jsdoc": "^3.4.3",
     "xo": "^0.17.0"
   },
   "scripts": {
