--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javascript-opentimestamps",
   "version": "1.0.0",
   "description": "JS Porting of OpenTimestamps",
-  "main": "test.js",
+  "main": "open-timestamps.js",
   "dependencies": {
     "crypto": "0.0.3",
     "fs": "0.0.1-security",
@@ -29,8 +29,8 @@
     "type": "git",
     "url": "git+https://github.com/eternitywall/javascript-opentimestamps.git"
   },
-  "author": "Luca Vaccaro",
-  "license": "GPL3",
+  "author": "EternityWall",
+  "license": "LPGL3",
   "bugs": {
     "url": "https://github.com/eternitywall/javascript-opentimestamps/issues"
   },
