--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "javascript-opentimestamps",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "JS Porting of OpenTimestamps",
   "main": "open-timestamps.js",
   "dependencies": {
@@ -9,7 +9,8 @@
     "promise": "^7.1.1",
     "randomstring": "^1.1.5",
     "request": "^2.79.0",
-    "request-promise": "^4.1.1"
+    "request-promise": "^4.1.1",
+    "bytebuffer": "^5.0.1"
   },
   "devDependencies": {
     "tape": "^4.6.3",
