adding browser tests to travis

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "tap": "~8.0.1",
     "tap-parser": "~3.0.4",
     "jsdoc": "^3.4.3",
-    "xo": "^0.17.0"
+    "xo": "^0.17.0",
+    "browserify": "^14.0.0",
+    "tape-run":"2.1.6",
+    "faucet":"0.0.1"
   },
   "scripts": {
-    "test": "tap test/*.js && xo --ignore ./out/*"
+    "test": "tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run | faucet"
   },
   "xo": {
     "esnext": true,
