--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: node_js
 node_js:
   - "6"
   - "6.1"
+addons:
+  apt:
+    packages:
+      - xvfb
+install:
+  - export DISPLAY=':99.0'
+  - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
