remove faucet output cause it's not well-formed from travis-ci

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "faucet":"0.0.1"
   },
   "scripts": {
-    "test": "tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run | faucet"
+    "test": "tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run"
   },
   "xo": {
     "esnext": true,
