--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "JS Porting of OpenTimestamps",
   "main": "open-timestamps.js",
   "dependencies": {
+    "bytebuffer": "^5.0.1",
     "crypto": "0.0.3",
     "fs": "0.0.1-security",
     "promise": "^7.1.1",
+    "properties": "^1.2.1",
     "randomstring": "^1.1.5",
     "request": "^2.79.0",
-    "request-promise": "^4.1.1",
-    "bytebuffer": "^5.0.1"
+    "request-promise": "^4.1.1"
   },
   "devDependencies": {
     "tape": "^4.6.3",
@@ -19,8 +20,8 @@
     "jsdoc": "^3.4.3",
     "xo": "^0.17.0",
     "browserify": "^14.0.0",
-    "tape-run":"2.1.6",
-    "faucet":"0.0.1"
+    "tape-run": "2.1.6",
+    "faucet": "0.0.1"
   },
   "scripts": {
     "test": "tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run"
