--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bytebuffer": "^5.0.1",
     "crypto": "0.0.3",
     "fs": "0.0.1-security",
+    "keccak": "^1.2.0",
     "promise": "^7.1.1",
     "properties": "^1.2.1",
     "randomstring": "^1.1.5",
