--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "devDependencies": {
     "tape": "^4.6.3",
-    "tap": "~8.0.1",
+    "tap": "10.3.0",
     "tap-parser": "~3.0.4",
     "jsdoc": "^3.4.3",
-    "xo": "^0.17.0",
-    "browserify": "14.0.0",
-    "tape-run": "2.1.6",
+    "xo": "0.17.1",
+    "browserify": "13.3.0",
+    "tape-run": "3.0.0",
     "faucet": "0.0.1"
   },
   "scripts": {
