--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bitcore-lib": "^0.13.7",
     "bitcore-message": "^1.0.4",
     "bytebuffer": "^5.0.1",
+    "commander": "^2.9.0",
     "crypto": "0.0.3",
     "fs": "0.0.1-security",
     "keccak": "^1.2.0",
