adding shell script to test cli and prevent problem seen in version 0.2.0

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "faucet": "0.0.1"
   },
   "scripts": {
-    "test": "tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run",
+    "test": "./test/ots-cli.sh && tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run",
     "jsdoc": "jsdoc -c conf.json -R README.md src/"
   },
   "xo": {
