--- a/package.json
+++ b/package.json
@@ -24,9 +24,27 @@
     "tap-parser": "~3.0.4",
     "jsdoc": "^3.4.3",
     "xo": "0.17.1",
-    "browserify": "13.3.0",
     "tape-run": "3.0.0",
-    "faucet": "0.0.1"
+    "faucet": "0.0.1",
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "13.0.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-exec": "^2.1.3",
+    "gulp-include": "^2.3.1",
+    "gulp-order": "^1.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-sass-glob": "^1.0.6",
+    "gulp-uglify": "^3.0.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "test": "./test/ots-cli.sh && tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run",
