--- a/package.json
+++ b/package.json
@@ -19,19 +19,14 @@
     "web3": "^0.18.2"
   },
   "devDependencies": {
-    "tape": "^4.6.3",
-    "tap": "10.3.0",
-    "tap-parser": "~3.0.4",
-    "jsdoc": "^3.4.3",
-    "xo": "0.17.1",
-    "tape-run": "3.0.0",
-    "faucet": "0.0.1",
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "13.0.0",
+    "faucet": "0.0.1",
+    "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
@@ -43,8 +38,14 @@
     "gulp-sass": "^2.3.2",
     "gulp-sass-glob": "^1.0.6",
     "gulp-uglify": "^3.0.0",
+    "jsdoc": "^3.4.3",
     "run-sequence": "^1.2.2",
-    "vinyl-source-stream": "^1.1.0"
+    "tap": "10.3.0",
+    "tap-parser": "~3.0.4",
+    "tape": "^4.6.3",
+    "tape-run": "3.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "xo": "0.17.1"
   },
   "scripts": {
     "test": "./test/ots-cli.sh && tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run",
