--- a/package.json
+++ b/package.json
@@ -30,15 +30,11 @@
     "gulp": "^3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
-    "gulp-connect": "^5.0.0",
     "gulp-exec": "^2.1.3",
-    "gulp-include": "^2.3.1",
-    "gulp-order": "^1.1.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.2",
-    "gulp-sass-glob": "^1.0.6",
     "gulp-uglify": "^3.0.0",
     "jsdoc": "^3.4.3",
+    "pump": "^1.0.2",
     "run-sequence": "^1.2.2",
     "tap": "10.3.0",
     "tap-parser": "~3.0.4",
