--- a/package.json
+++ b/package.json
@@ -34,24 +34,17 @@
     "jsdoc": "^3.5.5",
     "pump": "^1.0.3",
     "run-sequence": "^1.2.2",
+    "standard": "^11.0.1",
     "tap": "10.3.0",
     "tap-parser": "~3.0.4",
     "tape": "^4.9.0",
     "tape-run": "3.0.0",
-    "vinyl-source-stream": "^1.1.2",
-    "xo": "0.17.1"
+    "vinyl-source-stream": "^1.1.2"
   },
   "scripts": {
-    "test": "./test/ots-cli.sh && tap test/*.js && xo --ignore ./out/* && browserify test/*.js | tape-run",
+    "test": "./test/ots-cli.sh && tap test/*.js && standard ./ && browserify test/*.js | tape-run",
     "jsdoc": "jsdoc -c conf.json -R README.md src/",
     "dist": "gulp"
-  },
-  "xo": {
-    "esnext": true,
-    "space": true,
-    "rules": {
-      "new-cap": 0
-    }
   },
   "bin": {
     "ots-cli.js": "./ots-cli.js"
