--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "extend-error": "0.0.2",
     "fs": "0.0.1-security",
     "keccak": "^1.4.0",
+    "minimatch": "^3.0.4",
     "moment-timezone": "^0.5.14",
     "promise": "^7.3.1",
     "properties": "^1.2.1",
