--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "browserify": "13.0.0",
     "faucet": "0.0.1",
     "gulp": "^3.9.1",
+    "gulp-append-prepend": "^1.0.4",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-exec": "^2.1.3",
