--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "scripts": {
     "test": "./test/ots-cli.sh && tap test/*.js && standard ./ && browserify test/*.js | tape-run",
+    "test-verify": "./test/ots-cli.sh && tap 'test/debug/verify.js' test/*.js && standard ./ && browserify test/*.js | tape-run",
     "jsdoc": "jsdoc -c conf.json -R README.md src/",
     "dist": "gulp"
   },
