--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/plugin-transform-classes": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "babelify": "^7.3.0",
     "browserify": "13.0.0",
     "faucet": "0.0.1",
